Changed button to anchor tag and added some styles

--- a/TrackDesk.Web/train-desk/src/app/routes/home/home.component.html
+++ b/TrackDesk.Web/train-desk/src/app/routes/home/home.component.html
@@ -8,4 +8,4 @@
   <source src="home.mp4" type="video/mp4" />
   Your browser doesn't support video!
 </video>
-<button>Start!</button>
+<a>Start!</a>
