--- a/TrackDesk.Web/train-desk/src/app/routes/home/home.component.scss
+++ b/TrackDesk.Web/train-desk/src/app/routes/home/home.component.scss
@@ -8,7 +8,7 @@ video {
   z-index: -1;
 }
 
-button {
+a {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -16,7 +16,7 @@ button {
   padding: 15px 40px;
   font-size: 36px;
   border: none;
-  border-radius: 50rem;
+  border-radius: 1rem;
   color: #ebecee;
   background-color: #374151;
   font-weight: 600;
@@ -24,10 +24,14 @@ button {
   transition: all 0.5s ease;
   font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-shadow: none;
+  border: 3px solid #272e39;
+  cursor: pointer;
 }
 
-button:hover,
-button:active {
+a:hover,
+a:active {
   background-color: #272e39;
-  box-shadow: none;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
